--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Daweon</title>
 	</head>
 	<body>
-		<p>Siemka!</p>
+		My website finally works!
+		<p><i>Pozdrawiam, Daweon</i></p>
 	</body>
 </html>
