--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<title>Daweon</title>
 	</head>
 	<body>
-		My website finally works!
-		<p><i>Pozdrawiam, Daweon</i></p>
+		<div style="font-size:2em">
+			My website finally works!
+			<p><i>Pozdrawiam, Daweon</i></p>
+		</div>
 	</body>
 </html>
