--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div style="font-size:2em">
 			My website finally works!
-			<p><i>Pozdrawiam, Daweon</i></p>
+			<p><i>Pozdrawiam, Daweon :)</i></p>
 		</div>
 	</body>
 </html>
