--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div style="font-size:2em">
-			My website finally works!
+			My website finally works! (Oh shit, unfortunately no.)
 			<p><i>Pozdrawiam, Daweon :)</i></p>
 		</div>
 	</body>
