--- a/beta.html
+++ b/beta.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width">
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script>
       var soundID = "Thunder";
