--- a/index.html
+++ b/index.html
@@ -6,24 +6,6 @@
 		<title>Daweon</title>
 	</head>
 	<body>
-		<div style="font-size:2em">
-			My website finally works! (Oh shit, unfortunately no.)
-			<p><i>Pozdrawiam, Daweon :)</i></p>
-			<button>play</button>
-			<audio></audio>
-			<script>
-			var xhr = new XMLHttpRequest();
-			xhr.open('GET', 'Domofon/1864.66.mp3', true);
-			xhr.responseType = 'blob';
-			var audio = document.querySelector('audio');
-			xhr.onload = function () {
-			    audio.src = URL.createObjectURL(xhr.response);  
-			};
-			xhr.send();
-			document.querySelector('button').onclick = function () {
-			    audio.play();
-			};
-			</script>
-		</div>
+		Witam!
 	</body>
 </html>
