--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -54,7 +54,7 @@
 	</head>
 	<body>
 		<section id="galery">
-			<section id="img"><img src="120.jpg" /></section>
+			<section id="img"><img src="120.png" /></section>
 		</section>
   </body>
 </html>
