--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -26,8 +26,8 @@
     }
 
     #img {
-          width: calc(100% - 400px);
-        height: calc(100% - 80px);
+          width: 100%;
+        height: 100%;
         float: left;
         position: relative;
     }
