--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -34,9 +34,9 @@
 
     #img img {
       width: auto;
-        max-width: calc(100% - 150px);
+        max-width: 100%;
         height: auto;
-        max-height: calc(100%);
+        max-height: 100%;
         position: absolute;
         left: 50%;
         top: 50%;
