--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl"><head>
 		<meta charset="UTF-8">
+	<meta name="theme-color" content="#131313">
 		<style>
     html, body
     {
