--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="pl">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="theme-color" content="#131313">
 		<meta name="viewport" content="width=device-width">
+		<style>
+			body
+			{
+				background-color: #131313;
+				color: #f1f1f1;
+			}
+		</style>
 		<title>Daweon</title>
 	</head>
 	<body>
