--- a/index.html
+++ b/index.html
@@ -1,20 +1,49 @@
 <!DOCTYPE html>
 <html lang="pl">
 	<head>
-		<meta charset="utf-8" />
-		<meta name="theme-color" content="#131313">
-		<meta name="viewport" content="width=device-width">
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/style.css">
+		<title>Daweon</title>
 		<style>
-			body
-			{
-				background-color: #131313;
-				color: #f1f1f1;
+			html, body {
+			    width: 100%;
+			    height: 100%;
+			    margin: 0;
+			    padding: 0;
+			    color: #fff;
+			    overflow: hidden;
+			    font-family: sans-serif;
+			    color: #aaa;
+			}
+			
+			#galery {
+			    width: 100%;
+			    height: 100%;
+			    background: #131313;
+			}
+			
+			#img {
+			    width: calc(100%);
+			    height: calc(100%);
+			    float: left;
+			    position: relative;
+			}
+			
+			#img img {
+			    width: auto;
+			    max-width: calc(100% - 150px);
+			    height: auto;
+			    max-height: calc(100%);
+			    position: absolute;
+			    left: 50%;
+			    top: 50%;
+			    transform: translate(-50%, -50%);
 			}
 		</style>
-		<title>Daweon</title>
 	</head>
 	<body>
-		<img src="
-29831366_1737722672955293_888648957_o_1737722672955293.jpg" />
+		<section id="galery">
+			<section id="img"><img src="29831366_1737722672955293_888648957_o_1737722672955293.jpg"></section>
+		</section>
 	</body>
 </html>
