--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
 		</style>
 	</head>
 	<body>
-		<section id="galery">
-			<section id="img"><img src="29831366_1737722672955293_888648957_o_1737722672955293.jpg"></section>
-		</section>
+		Cześć, wypełnić Ci PIT-a?!
 	</body>
 </html>
